--- a/uk/resources.html
+++ b/uk/resources.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Resources - OmegaT</title>
+  <title>Додаткові ресурси для OmegaT - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/uk/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT — це безкоштовна програма з перекладацькою пам’яттю, розрахована на професійних перекладачів. Написана на Java.">
 
   <link rel="canonical" href="http://omegat.org/uk/resources">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Resources - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Додаткові ресурси для OmegaT - OmegaT" />
+  <meta property="og:description" content="OmegaT — це безкоштовна програма з перекладацькою пам’яттю, розрахована на професійних перекладачів. Написана на Java." />
   <meta property="og:url"         content="http://omegat.org/uk/resources" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT — безкоштовна програма для перекладу" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/uk",
-    "headline": "Resources",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Додаткові ресурси для OmegaT",
+    "description": "OmegaT — це безкоштовна програма з перекладацькою пам’яттю, розрахована на професійних перекладачів. Написана на Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/uk/download">Download</a></li>
+        <li><a href="/uk/download">Завантажити OmegaT</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/uk/resources">Resources</a></li>
-        <li><a href="/uk/documentation">Documentation</a></li>
+        <li><a href="/uk/resources">Додаткові ресурси для OmegaT</a></li>
+        <li><a href="/uk/documentation">Документація</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Мови<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -169,7 +169,7 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-resources"><h1>Resources</h1></div>
+    <div class="jumbotron jumbo-page titles-resources"><h1>Додаткові ресурси для OmegaT</h1></div>
         
     <div class="container">
 <h2>Додаткові ресурси для OmegaT</h2>
@@ -300,7 +300,7 @@ Segmentation Macros</a></td>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>OmegaT в мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -312,30 +312,30 @@ Segmentation Macros</a></td>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>Documentation</h4>
+        <h4>Документація</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/uk/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/uk/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/uk/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/uk/reviews"><span class="glyphicon glyphicon-heart"></span> Reviews</a></li>
+            <li><a href="/uk/documentation#manual"><span class="glyphicon glyphicon-book"></span> Інструкція користувача</a></li>
+            <li><a href="/uk/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Тьюторіали</a></li>
+            <li><a href="/uk/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Практичні вказівки How To</a></li>
+            <li><a href="/uk/reviews"><span class="glyphicon glyphicon-heart"></span> Огляди OmegaT</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Проект OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/uk/contact"><span class="glyphicon glyphicon-envelope"></span> Contact and Support</a>
+            <a href="/uk/contact"><span class="glyphicon glyphicon-envelope"></span> Контакти та підтримка</a>
             </li>
             <li>
-            <a href="/uk/about"><span class="glyphicon glyphicon-question-sign"></span> About</a>
+            <a href="/uk/about"><span class="glyphicon glyphicon-question-sign"></span> Про програму</a>
             </li>
             <li>
-            <a href="/uk/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+            <a href="/uk/philosophy"><span class="glyphicon glyphicon-console"></span> Філософія</a>
             </li>
           </ul>
         </div>
