--- a/nl/index.html
+++ b/nl/index.html
@@ -291,7 +291,7 @@
     <div class="container-fluid versions">
       <ul class="list-group">
         <li class="list-group-item"><span class="badge"><a href="download#standard">OmegaT 3.6.0 update 7</a></span> Standaard versie</li>
-        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.3</a></span> Laatste versie</li>
+        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.3 update 1</a></span> Laatste versie</li>
       </ul>
     </div>
   </div>
