--- a/ru/index.html
+++ b/ru/index.html
@@ -290,7 +290,7 @@
     <div class="container-fluid versions">
       <ul class="list-group">
         <li class="list-group-item"><span class="badge"><a href="download#standard">OmegaT 3.6.0 update 7</a></span> Стандартная версия</li>
-        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.3</a></span> Последняя версия</li>
+        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.3 update 1</a></span> Последняя версия</li>
       </ul>
     </div>
   </div>
